--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.google.android.gms:play-services:4.0.30'
+    compile files('libs/mpandroidchartlibrary-2-1-6.jar')
     compile project(':openCVLibrary310')
 }
